--- a/BustaCallForDriver/app/src/main/res/layout/listview_item_one_way_together.xml
+++ b/BustaCallForDriver/app/src/main/res/layout/listview_item_one_way_together.xml
@@ -34,28 +34,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="195dp"
-        android:background="@drawable/listview_one_way_back"
-        android:orientation="vertical"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:background="@drawable/listview_one_way_back"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/listview_two_way_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:orientation="horizontal"
-                android:padding="5dp">
+                android:paddingTop="5dp">
 
                 <ImageView
                     android:layout_width="20dp"
@@ -139,99 +136,7 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="5dp">
 
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/listview_wave" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
-
-                    <TextView
-                        android:id="@+id/listview_two_way_endDate_year"
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:text="2016" />
-
-                    <TextView
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:text="년" />
-
-                    <TextView
-                        android:id="@+id/listview_two_way_endDate_month"
-                        style="@style/listviewText"
-                        android:layout_width="25dp"
-                        android:layout_height="20dp"
-                        android:text="12" />
-
-                    <TextView
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:text="월" />
-
-                    <TextView
-                        android:id="@+id/listview_two_way_endDate_day"
-                        style="@style/listviewText"
-                        android:layout_width="25dp"
-                        android:layout_height="20dp"
-                        android:text="30" />
-
-                    <TextView
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:text="일" />
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
-
-                    <TextView
-                        android:id="@+id/listview_two_way_endTime_amOrPm"
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:text="AM" />
-
-                    <TextView
-                        android:id="@+id/listview_two_way_endTime"
-                        style="@style/listviewText"
-                        android:layout_width="50dp"
-                        android:layout_height="20dp"
-                        android:text="14:00" />
-
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -239,22 +144,21 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="20dp"
-                android:layout_height="50dp"
+                android:layout_height="55dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/listview_two_arrow"
-                android:id="@+id/imageView2" />
+                android:src="@drawable/listview_one_arrow" />
 
             <LinearLayout
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 android:orientation="vertical">
 
@@ -263,7 +167,7 @@
                     style="@style/listviewPlaceText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ERROR"/>
+                    android:text="ERROR" />
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -274,7 +178,7 @@
                     style="@style/listviewPlaceText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ERROR"/>
+                    android:text="ERROR" />
             </LinearLayout>
 
 
@@ -289,10 +193,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:padding="5dp"
-                    android:orientation="horizontal"
                     android:background="@drawable/listview_goal_or_user_cnt_back"
-                    >
+                    android:orientation="horizontal"
+                    android:padding="5dp">
 
                     <ImageView
                         android:layout_width="20dp"
@@ -301,11 +204,11 @@
 
                     <TextView
                         android:id="@+id/listview_two_way_goal"
+                        style="@style/listviewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        style="@style/listviewText"
-                        android:text="ERROR"/>
+                        android:text="ERROR" />
 
                 </LinearLayout>
 
@@ -314,38 +217,75 @@
                     android:layout_height="5dp" />
 
                 <LinearLayout
+                    android:id="@+id/listview_share_layer"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:padding="5dp"
-                    android:orientation="horizontal"
-                    android:background="@drawable/listview_goal_or_user_cnt_back"
-                    >
+                    android:layout_height="50dp"
+                    android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:src="@drawable/listview_user" />
-
-                    <TextView
-                        android:id="@+id/listview_two_way_userCnt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
                         android:layout_weight="1"
-                        style="@style/listviewText"
-                        android:text="30"/>
+                        android:scaleType="fitXY"
+                        android:src="@drawable/listview_together_icon" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        style="@style/listviewText"
-                        android:text="명"/>
+                    <LinearLayout
+                        android:layout_width="5dp"
+                        android:layout_height="50dp"></LinearLayout>
 
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_weight="1"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/listview_together_minusercnt_icon" />
                 </LinearLayout>
 
             </LinearLayout>
 
+
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="15dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:text="가격"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/listview_one_way_price"
+                style="@style/listviewText"
+                android:layout_width="90dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="5dp"
+                android:text="800,000" />
+
+            <TextView
+                style="@style/listviewText"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:text="원" />
+
+
+        </LinearLayout>
+
+
     </LinearLayout>
+
 
 </RelativeLayout>
