--- a/BustaCallForDriver/app/src/main/res/layout/listview_item_two_way.xml
+++ b/BustaCallForDriver/app/src/main/res/layout/listview_item_two_way.xml
@@ -34,28 +34,28 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="195dp"
-        android:background="@drawable/listview_two_way_back"
-        android:orientation="vertical"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:background="@drawable/listview_two_way_back"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/listview_two_way_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="15dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="5dp">
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
 
                 <ImageView
                     android:layout_width="20dp"
@@ -143,7 +143,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="5dp">
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
 
                 <ImageView
                     android:layout_width="20dp"
@@ -239,21 +240,20 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="20dp"
-                android:layout_height="50dp"
+                android:layout_height="55dp"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/listview_two_arrow" />
 
             <LinearLayout
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 android:orientation="vertical">
 
@@ -262,7 +262,7 @@
                     style="@style/listviewPlaceText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ERROR"/>
+                    android:text="ERROR" />
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -273,7 +273,7 @@
                     style="@style/listviewPlaceText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ERROR"/>
+                    android:text="ERROR" />
             </LinearLayout>
 
 
@@ -288,10 +288,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:padding="5dp"
-                    android:orientation="horizontal"
                     android:background="@drawable/listview_goal_or_user_cnt_back"
-                    >
+                    android:orientation="horizontal"
+                    android:padding="5dp">
 
                     <ImageView
                         android:layout_width="20dp"
@@ -300,11 +299,11 @@
 
                     <TextView
                         android:id="@+id/listview_two_way_goal"
+                        style="@style/listviewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        style="@style/listviewText"
-                        android:text="ERROR"/>
+                        android:text="ERROR" />
 
                 </LinearLayout>
 
@@ -315,10 +314,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:padding="5dp"
-                    android:orientation="horizontal"
                     android:background="@drawable/listview_goal_or_user_cnt_back"
-                    >
+                    android:orientation="horizontal"
+                    android:padding="5dp">
 
                     <ImageView
                         android:layout_width="20dp"
@@ -327,18 +325,18 @@
 
                     <TextView
                         android:id="@+id/listview_two_way_userCnt"
+                        style="@style/listviewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        style="@style/listviewText"
-                        android:text="30"/>
+                        android:text="30" />
 
                     <TextView
+                        style="@style/listviewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        style="@style/listviewText"
-                        android:text="명"/>
+                        android:text="명" />
 
                 </LinearLayout>
 
