--- a/BustaCallForDriver/app/src/main/res/layout/activity_notice.xml
+++ b/BustaCallForDriver/app/src/main/res/layout/activity_notice.xml
@@ -38,68 +38,44 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:orientation="horizontal"
-            android:textColor="@color/colorPrimary"
-            android:textSize="15sp"
             android:text="알림 no / off"
-            />
+            android:textColor="@color/colorPrimary"
+            android:textSize="15sp" />
 
-        <LinearLayout
-            android:id="@+id/activity_notice_notice_on"
+        <RelativeLayout
+            android:id="@+id/activity_notice_on_or_off_layout"
             android:layout_width="110dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
-            android:background="@drawable/notice_on"
-            android:orientation="horizontal"
-            android:visibility="visible">
+            android:background="@drawable/notice_on">
 
-            <TextView
-                android:layout_width="55dp"
-                android:layout_height="30dp"
-                android:gravity="center"
-                android:text="켜기"
-                android:textColor="@color/AppColorWhite"
-                android:textSize="15sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="55dp"
-                android:layout_height="30dp"
-                android:gravity="center"
-                android:text="끄기"
-                android:textColor="@color/colorPrimary"
-                android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/acticity_notice_on_text"
+                    android:layout_width="55dp"
+                    android:layout_height="30dp"
+                    android:gravity="center"
+                    android:text="켜기"
+                    android:textColor="@color/AppColorWhite"
+                    android:textSize="15sp" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/acticity_notice_off_text"
+                    android:layout_width="55dp"
+                    android:layout_height="30dp"
+                    android:gravity="center"
+                    android:text="끄기"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="15sp" />
+            </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
-            android:id="@+id/activity_notice_notice_off"
-            android:layout_width="110dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/notice_off"
-            android:orientation="horizontal"
-            android:visibility="invisible">
-
-            <TextView
-                android:layout_width="55dp"
-                android:layout_height="30dp"
-                android:gravity="center"
-                android:text="켜기"
-                android:textColor="@color/colorPrimary"
-                android:textSize="15sp" />
-
-            <TextView
-                android:layout_width="55dp"
-                android:layout_height="30dp"
-                android:gravity="center"
-                android:text="끄기"
-                android:textColor="@color/AppColorWhite"
-                android:textSize="15sp" />
-
-        </LinearLayout>
 
     </RelativeLayout>
 
@@ -111,29 +87,29 @@
             android:id="@+id/activity_notice_noexist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true">
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
-                android:src="@drawable/notice_noexist_icon"/>
+                android:src="@drawable/notice_noexist_icon" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="새로운 알림이 없습니다."
                 android:textColor="@color/AppColorLightGray"
-                android:textSize="20sp"
-                android:text="새로운 알림이 없습니다."/>
+                android:textSize="20sp" />
         </LinearLayout>
 
         <ListView
-            android:visibility="invisible"
             android:id="@+id/activity_notice_listview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:visibility="invisible" />
 
     </RelativeLayout>
 </LinearLayout>
