--- a/BustaCallForDriver/app/src/main/res/layout/fragment_signin_user.xml
+++ b/BustaCallForDriver/app/src/main/res/layout/fragment_signin_user.xml
@@ -2,11 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f5f5f5"
-    android:orientation="vertical">
+    android:background="#f5f5f5">
 
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/subtitle">
