--- a/BustaCallForDriver/app/src/main/res/layout/listview_item_one_way_together.xml
+++ b/BustaCallForDriver/app/src/main/res/layout/listview_item_one_way_together.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity__main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.user.bustacallfordriver.view.Activity_Main">
 
     <LinearLayout
@@ -34,29 +30,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="195dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/listview_one_way_back"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="5dp"
-            android:orientation="vertical">
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:paddingBottom="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="5dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:orientation="horizontal"
-                android:paddingTop="5dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
+                    android:layout_gravity="center"
                     android:src="@drawable/listview_calender" />
 
                 <LinearLayout
@@ -68,7 +61,7 @@
                     android:paddingRight="10dp">
 
                     <TextView
-                        android:id="@+id/listview_two_way_startDate_year"
+                        android:id="@+id/listview_one_way_together_startDate_year"
                         style="@style/listviewText"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
@@ -81,7 +74,7 @@
                         android:text="년" />
 
                     <TextView
-                        android:id="@+id/listview_two_way_startDate_month"
+                        android:id="@+id/listview_one_way_together_startDate_month"
                         style="@style/listviewText"
                         android:layout_width="25dp"
                         android:layout_height="20dp"
@@ -94,7 +87,7 @@
                         android:text="월" />
 
                     <TextView
-                        android:id="@+id/listview_two_way_startDate_day"
+                        android:id="@+id/listview_one_way_together_startDate_day"
                         style="@style/listviewText"
                         android:layout_width="25dp"
                         android:layout_height="20dp"
@@ -118,14 +111,14 @@
                     android:paddingRight="10dp">
 
                     <TextView
-                        android:id="@+id/listview_two_way_startTime_amOrPm"
+                        android:id="@+id/listview_one_way_together_startTime_amOrPm"
                         style="@style/listviewText"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="AM" />
 
                     <TextView
-                        android:id="@+id/listview_two_way_startTime"
+                        android:id="@+id/listview_one_way_together_startTime"
                         style="@style/listviewText"
                         android:layout_width="50dp"
                         android:layout_height="20dp"
@@ -136,18 +129,22 @@
 
             </LinearLayout>
 
-
         </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:src="@drawable/dotline" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="5dp">
 
             <ImageView
                 android:layout_width="20dp"
@@ -163,7 +160,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/listview_two_way_startPlace"
+                    android:id="@+id/listview_one_way_together_startPlace"
                     style="@style/listviewPlaceText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -174,7 +171,7 @@
                     android:layout_height="15dp" />
 
                 <TextView
-                    android:id="@+id/listview_two_way_endPlace"
+                    android:id="@+id/listview_one_way_together_endPlace"
                     style="@style/listviewPlaceText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -203,7 +200,7 @@
                         android:src="@drawable/listview_chart" />
 
                     <TextView
-                        android:id="@+id/listview_two_way_goal"
+                        android:id="@+id/listview_one_way_together_goal"
                         style="@style/listviewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -243,22 +240,21 @@
 
             </LinearLayout>
 
-
         </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:src="@drawable/dotline" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="15dp" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_height="40dp"
             android:orientation="horizontal"
-            android:padding="5dp">
+            android:paddingBottom="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="5dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -268,7 +264,7 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/listview_one_way_price"
+                android:id="@+id/listview_one_way_together_price"
                 style="@style/listviewText"
                 android:layout_width="90dp"
                 android:layout_height="20dp"
@@ -283,9 +279,6 @@
 
 
         </LinearLayout>
-
-
     </LinearLayout>
-
 
 </RelativeLayout>
