--- a/BustaCallForDriver/app/src/main/res/layout/listview_item_two_way.xml
+++ b/BustaCallForDriver/app/src/main/res/layout/listview_item_two_way.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity__main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.user.bustacallfordriver.view.Activity_Main">
 
     <LinearLayout
@@ -34,20 +30,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="195dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/listview_two_way_back"
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/toplayer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_height="70dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -227,21 +219,18 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </LinearLayout>
         </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:src="@drawable/dotline" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_height="115dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -283,6 +272,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
+                android:layout_gravity="center_vertical"
                 android:orientation="vertical">
 
                 <LinearLayout
