--- a/BustaCallForDriver/app/src/main/res/values/colors.xml
+++ b/BustaCallForDriver/app/src/main/res/values/colors.xml
@@ -4,11 +4,15 @@
     <color name="colorPrimaryGray">#ABAAAA</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorRed">#990000</color>
+
 
     <color name="AppColorBlack">#000000</color>
     <color name="AppColorWhite">#FFFFFF</color>
     <color name="AppColorGray">#616060</color>
     <color name="AppColorLightGray">#dcdddd</color>
+    <color name="AppColorLightBlue">#69A0C8</color>
+
 
     <color name="textYellow">#F7D26C</color>
     <color name="textRed">#cc5555</color>
