--- a/app/src/main/res/layout/fragment_rentaldetail_default.xml
+++ b/app/src/main/res/layout/fragment_rentaldetail_default.xml
@@ -15,15 +15,15 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <FrameLayout
+                android:id="@+id/fragment_rentaldetail_default_layout"
                 android:layout_width="match_parent"
                 android:layout_height="195dp">
-                <!--<include layout="@layout/listview_item_one_way"/>-->
-                <include layout="@layout/listview_item_two_way" />
-            </RelativeLayout>
+
+            </FrameLayout>
 
             <TextView
-                android:id="@+id/fragment_rentaldetail_tv_detailcontent"
+                android:id="@+id/fragment_rentaldetail_default_tv_detailcontent"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:background="@drawable/detail_content_box"
@@ -63,23 +63,23 @@
                         android:layout_width="wrap_content"
                         android:layout_height="48dp"
                         android:layout_alignParentRight="true"
+                        android:gravity="center"
                         android:orientation="horizontal"
                         android:paddingRight="13dp">
 
                         <EditText
-                            android:id="@+id/activtiy_signin_bus_et_busnum"
+                            android:id="@+id/fragment_rentaldetail_default_et_tenderPrice"
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:textSize="20sp" />
+                            android:textAlignment="textEnd"
+                            android:textSize="20sp"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
                             android:paddingLeft="13dp"
                             android:text="원"
-                            android:textSize="25sp" />
+                            android:textSize="20sp"/>
                     </LinearLayout>
 
                 </RelativeLayout>
@@ -125,11 +125,12 @@
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
                         <TextView
-                            android:id="@+id/toll_exclude"
+                            android:id="@+id/fragment_rentaldetail_default_tv_toll_exclude"
                             style="@style/detail_plus_text"
                             android:textColor="@color/AppColorLightGray"
                             android:text="미포함"/>
                         <TextView
+                            android:id="@+id/fragment_rentaldetail_default_tv_toll_include"
                             style="@style/detail_plus_text"
                             android:layout_marginLeft="15dp"
                             android:textColor="@color/colorPrimary"
