--- a/app/src/main/res/layout/listview_item_one_way_together.xml
+++ b/app/src/main/res/layout/listview_item_one_way_together.xml
@@ -1,284 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity__main"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.user.bustacallfordriver.view.Activity_Main">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/listview_one_way" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="편도"
-            android:textColor="@color/colorPrimaryGray"
-            android:textSize="20sp" />
-    </LinearLayout>
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="195dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingTop="5dp">
+        <include layout="@layout/listview_item_one_way_together_top" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+        <include layout="@layout/listview_item_one_way_bottom" />
 
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/listview_calender" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
-
-                    <TextView
-                        android:id="@+id/listview_one_way_together_startDate_year"
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:text="2016" />
-
-                    <TextView
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:text="년" />
-
-                    <TextView
-                        android:id="@+id/listview_one_way_together_startDate_month"
-                        style="@style/listviewText"
-                        android:layout_width="25dp"
-                        android:layout_height="20dp"
-                        android:text="12" />
-
-                    <TextView
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:text="월" />
-
-                    <TextView
-                        android:id="@+id/listview_one_way_together_startDate_day"
-                        style="@style/listviewText"
-                        android:layout_width="25dp"
-                        android:layout_height="20dp"
-                        android:text="30" />
-
-                    <TextView
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:text="일" />
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
-
-                    <TextView
-                        android:id="@+id/listview_one_way_together_startTime_amOrPm"
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:text="AM" />
-
-                    <TextView
-                        android:id="@+id/listview_one_way_together_startTime"
-                        style="@style/listviewText"
-                        android:layout_width="50dp"
-                        android:layout_height="20dp"
-                        android:text="14:00" />
-
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:src="@drawable/dotline" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingBottom="5dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingTop="5dp">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="55dp"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/listview_one_arrow" />
-
-            <LinearLayout
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/listview_one_way_together_startPlace"
-                    style="@style/listviewPlaceText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="ERROR" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="15dp" />
-
-                <TextView
-                    android:id="@+id/listview_one_way_together_endPlace"
-                    style="@style/listviewPlaceText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="ERROR" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:background="@drawable/listview_goal_or_user_cnt_back"
-                    android:orientation="horizontal"
-                    android:padding="5dp">
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:src="@drawable/listview_chart" />
-
-                    <TextView
-                        android:id="@+id/listview_one_way_together_goal"
-                        style="@style/listviewText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="ERROR" />
-
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="5dp" />
-
-                <LinearLayout
-                    android:id="@+id/listview_share_layer"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/listview_together_icon" />
-
-                    <LinearLayout
-                        android:layout_width="5dp"
-                        android:layout_height="50dp"></LinearLayout>
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/listview_together_minusercnt_icon" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:src="@drawable/dotline" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal"
-            android:paddingBottom="5dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingTop="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="가격"
-                android:textColor="@color/colorPrimary"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/listview_one_way_together_price"
-                style="@style/listviewText"
-                android:layout_width="90dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="5dp"
-                android:text="800,000" />
-
-            <TextView
-                style="@style/listviewText"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="원" />
-
-
-        </LinearLayout>
     </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
