--- a/app/src/main/res/layout/fragment_rentaldetail_together.xml
+++ b/app/src/main/res/layout/fragment_rentaldetail_together.xml
@@ -74,8 +74,32 @@
 
             </RelativeLayout>
         </LinearLayout>
-
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:padding="15dp"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:textColor="@color/colorRed"
+            android:textSize="18sp"
+            android:text="@string/rentaldetail_alert1"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp"
+            android:textColor="@color/colorRed"
+            android:textSize="18sp"
+            android:text="@string/rentaldetail_alert2"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
