--- a/app/src/main/res/layout/fragment_signin_license.xml
+++ b/app/src/main/res/layout/fragment_signin_license.xml
@@ -39,9 +39,10 @@
                     android:layout_marginTop="5dp">
 
                     <ImageView
+                        android:scaleType="fitXY"
                         android:id="@+id/activtiy_signin_license_driverlicense"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="280dp"
+                        android:layout_height="180dp"
                         android:layout_centerInParent="true"
                         android:src="@drawable/signin_license_driverlicense" />
 
@@ -72,9 +73,10 @@
                     android:layout_marginBottom="10dp">
 
                     <ImageView
+                        android:scaleType="fitXY"
                         android:id="@+id/activtiy_signin_license_deductionconfirm"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="280dp"
+                        android:layout_height="150dp"
                         android:layout_centerInParent="true"
                         android:src="@drawable/signin_license_deductionconfirm" />
 
