--- a/app/src/main/res/layout/fragment_signin_user.xml
+++ b/app/src/main/res/layout/fragment_signin_user.xml
@@ -46,6 +46,7 @@
                         android:id="@+id/activtiy_signin_user_profile"
                         android:layout_width="110dp"
                         android:layout_height="110dp"
+                        android:scaleType="fitXY"
                         android:layout_centerInParent="true"
                         android:src="@drawable/signin_user_profile" />
 
