령현- 리스트 뜸, 매물상세가 이상함

--- a/app/src/main/res/layout/activity_rentaldetail.xml
+++ b/app/src/main/res/layout/activity_rentaldetail.xml
@@ -6,6 +6,7 @@
 
     <RelativeLayout
         android:id="@+id/top"
+        android:background="@drawable/signin_subtitle_box"
         style="@style/White_TitleBar">
 
         <ImageView
